Portals seem to be broken #49010

Closed
opened 2016-08-03 11:42:35 +02:00 by Sebastian Koenig · 5 comments

System Information
elementaryOS 0.3.1, GTX980ti

Blender Version
Broken: 2.77.1, 70100b4
Worked: 2.77, 4e4ff72

Short description of error
Portals seem to have no effect in recent builds, neither on GPU nor CPU.

Exact steps for others to reproduce the error
Open this file and render. It is much noisier than in previous versions of Blender, where portals where working.
portal_issue.blend

**System Information** elementaryOS 0.3.1, GTX980ti **Blender Version** Broken: 2.77.1, 70100b4 Worked: 2.77, 4e4ff72 **Short description of error** Portals seem to have no effect in recent builds, neither on GPU nor CPU. **Exact steps for others to reproduce the error** Open this file and render. It is much noisier than in previous versions of Blender, where portals where working. [portal_issue.blend](https://archive.blender.org/developer/F331861/portal_issue.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

This issue was referenced by blender/cycles@32cae862fa

This issue was referenced by blender/cycles@32cae862fae66319c2bd01eb4a7ddcb6068bf7ed

This issue was referenced by 285e082a77

This issue was referenced by 285e082a772f99fc09e52bcc8e8dd95f66431a60

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49010
No description provided.