Fix T49010: Portals don't work in recent Blender versions